Revise README for clarity and completeness
Updated project overview, objectives, and structure in README.md.